<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/character_group"
        android:checkableBehavior="single"
        android:title="@string/characters_label">

        <item
            android:id="@+id/characterListFragment"
            android:checkable="true"
            android:icon="@drawable/ic_characters_24"
            android:title="@string/all_characters_label" />

        <item
            android:id="@+id/searchCharacterListFragment"
            android:checkable="true"
            android:icon="@drawable/ic_search_characters_24"
            android:title="@string/search_label" />

    </group>

    <group
        android:id="@+id/episode_group"
        android:checkableBehavior="single"
        android:title="@string/episodes_label">

        <item
            android:id="@+id/episodeListFragment"
            android:checkable="true"
            android:icon="@drawable/ic_episodes_24"
            android:title="@string/all_episodes_label" />

    </group>

</menu>