<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/characterListFragment">

    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.slowerror.rickandmorty.ui.character_list.CharacterListFragment"
        android:label="@string/characters_label"
        tools:layout="@layout/fragment_character_list">

        <action
            android:id="@+id/action_characterListFragment_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right" />

    </fragment>

    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.slowerror.rickandmorty.ui.character_details.CharacterDetailsFragment"
        android:label="@string/character_details_label"
        tools:layout="@layout/fragment_character_details">

        <!--suppress NavigationFile -->
        <argument
            android:name="characterId"
            android:defaultValue="0"
            app:argType="integer" />
        <action
            android:id="@+id/action_characterDetailsFragment_to_episodeDetailsBottomSheetFragment"
            app:destination="@id/episodeDetailsBottomSheetFragment" />

    </fragment>

    <fragment
        android:id="@+id/episodeListFragment"
        android:name="com.slowerror.rickandmorty.ui.episode_list.EpisodeListFragment"
        android:label="@string/episodes_label"
        tools:layout="@layout/fragment_episode_list">

        <action
            android:id="@+id/action_episodeListFragment_to_episodeDetailsFragment"
            app:destination="@id/episodeDetailsBottomSheetFragment" />

    </fragment>

    <dialog
        android:id="@+id/episodeDetailsBottomSheetFragment"
        android:name="com.slowerror.rickandmorty.ui.episode_details.EpisodeDetailsFragment"
        android:label=""
        tools:layout="@layout/fragment_episode_details">

        <!--suppress NavigationFile -->
        <argument
            android:name="episodeId"
            android:defaultValue="0"
            app:argType="integer" />

    </dialog>

    <fragment
        android:id="@+id/searchCharacterListFragment"
        android:name="com.slowerror.rickandmorty.ui.search_character_list.SearchCharacterListFragment"
        android:label="@string/search_label"
        tools:layout="@layout/fragment_search_character_list">

        <action
            android:id="@+id/action_searchCharacterListFragment_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right" />

    </fragment>

</navigation>